# polaris

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  codeql.yml  opensuse-build.yml  public-hygiene.yml
browser_stream_helper/: go.mod  go.sum  main.go  main_test.go
cmake/compile_definitions/: common.cmake  linux.cmake  macos.cmake  unix.cmake  windows.cmake
cmake/dependencies/: Boost_Polaris.cmake  common.cmake  libevdev_Polaris.cmake  linux.cmake  macos.cmake  prepared_ffmpeg.cmake
cmake/macros/: common.cmake
cmake/packaging/: common.cmake  linux.cmake  macos.cmake  unix.cmake  windows.cmake  windows_nsis.cmake
cmake/prep/: build_version.cmake  constants.cmake  init.cmake  options.cmake  special_package_configuration.cmake
cmake/targets/: common.cmake  macos.cmake  windows.cmake
docs/: bazzite.md  building.md  changelog.md  configuration.md  family-mode.md  gamescope_backend_spike.md  getting_started.md  openSUSE.md  polaris-ecosystem-design.md  polaris_wayland_runtime_spike.md  runtime.md  runtime_backend_architecture.md  runtime_backend_issue_breakdown.md  session-notes-2026-04-17.md  troubleshooting.md  ubuntu.md
docs/research/: amd-linux-streaming-optimization.md  kde-wayland-virtual-display.md
docs/superpowers/plans/: 2026-05-18-dev-clean-tooling.md  2026-05-18-polaris-1-0-14-release.md
docs/superpowers/specs/: 2026-05-18-dev-clean-design.md
packaging/linux/: dev.polaris-stream.app.Polaris.desktop  dev.polaris-stream.app.Polaris.metainfo.xml  dev.polaris-stream.app.Polaris.terminal.desktop  polaris.service.in
packaging/linux/AppImage/: AppRun  dev.polaris-stream.app.Polaris.desktop
packaging/linux/Arch/: PKGBUILD  polaris.install
packaging/linux/fedora/: Polaris.spec
packaging/linux/flatpak/: README.md  dev.polaris-stream.app.Polaris.desktop  dev.polaris-stream.app.Polaris.yml  exceptions.json
packaging/linux/flatpak/scripts/: additional-install.sh  polaris.sh  remove-additional-install.sh
scripts/: _locale.py  check-public-docs.sh  check-public-surface.sh  check-web-performance-budget.mjs  deploy-web-assets.sh  dev-clean.sh  linux_build.sh  polaris-nova-mirror-desktop-smoke.sh  smoke-web-routes.mjs
src/: adaptive_bitrate.cpp  adaptive_bitrate.h  ai_optimizer.cpp  ai_optimizer.h  audio.cpp  audio.h  browser_stream.cpp  browser_stream.h  browser_stream_protocol.cpp  browser_stream_protocol.h  client_profiles.cpp  client_profiles.h  config.cpp  config.h  confighttp.cpp  confighttp.h  confighttp_validation.cpp  confighttp_validation.h  crypto.cpp  crypto.h  device_db.cpp  device_db.h  display_device.cpp  entry_handler.cpp  entry_handler.h  game_classifier.cpp  game_classifier.h  game_library_scanner.cpp  game_library_scanner.h  globals.cpp  globals.h  httpcommon.cpp  httpcommon.h  input.cpp  input.h  logging.cpp  logging.h  main.cpp  network.cpp  network.h  (+27 more)
src/nvenc/: nvenc_base.cpp  nvenc_base.h  nvenc_config.h
src/platform/: common.h
src/platform/linux/: audio.cpp  cage_display_router.cpp  cage_display_router.h  cuda.cpp  cuda.cu  cuda.h  evdigrab.cpp  graphics.cpp  graphics.h  kmsgrab.cpp  libva_compat.cpp  misc.cpp  pipewire_capture.cpp  pipewire_capture.h  portal_grab.cpp  session_manager.cpp  session_manager.h  stream_display_policy.cpp  stream_display_policy.h  vaapi.cpp  vaapi.h  virtual_display.cpp  virtual_display.h  wayland.cpp  wayland.h  wlgrab.cpp  wlgrab_pixel_copy.h  x11grab.cpp
src/platform/linux/input/: inputtino_common.h  inputtino_gamepad.cpp  inputtino_gamepad_isolation.cpp  inputtino_gamepad_isolation.h  inputtino_keyboard.cpp  inputtino_mouse.cpp  inputtino_pen.cpp  inputtino_touch.cpp  inputtino_wayland_virtual_input.cpp  inputtino_wayland_virtual_input.h
src/platform/linux/protocols/: virtual-keyboard-unstable-v1.xml
src/platform/macos/: microphone.mm
src/platform/windows/: audio.cpp  display.h  display_base.cpp  display_ram.cpp  display_vram.cpp  display_wgc.cpp
src_assets/common/assets/web/: App.vue  Checkbox.vue  ClientCard.vue  CommandPalette.vue  Navbar.vue  app.css  (+69 more)
src_assets/linux/assets/: apps.json
src_assets/linux/misc/: 60-polaris.conf  60-polaris.rules  postinst
tests/: CMakeLists.txt  tests_common.h  tests_environment.h  tests_events.h  tests_main.cpp  tests_paths.h
tests/cmake/: test_prepared_ffmpeg.cmake
tests/e2e/: README.md  command-palette.spec.js  config.spec.js  dashboard.spec.js  login.spec.js  pairing.spec.js  polaris-ui-sweep.spec.js  polaris-viewports.js  troubleshooting.spec.js
tests/e2e/fixtures/: auth.js
tests/integration/: test_config_consistency.cpp  test_external_commands.cpp
tests/scripts/: test_dev_clean.sh
tests/unit/: test_adaptive_bitrate.cpp  test_ai_optimizer.cpp  test_audio.cpp  test_browser_stream_protocol.cpp  test_client_settings_advertisement.cpp  test_config_parser.cpp  test_confighttp_validation.cpp  test_cursor_visibility.cpp  test_device_db.cpp  test_display_device.cpp  test_entry_handler.cpp  test_file_handler.cpp  test_game_library_scanner.cpp  test_http_pairing.cpp  test_httpcommon.cpp  test_kmsgrab_logging_source.cpp  test_launch_mode_contract.cpp  test_logging.cpp  test_mouse.cpp  test_network.cpp  test_prepared_ffmpeg.cpp  test_private_state_file.cpp  test_process_migration.cpp  test_pulse_mainloop_contract.cpp  test_session_event_queue.cpp  test_session_stop_contract.cpp  test_stream.cpp  test_stream_display_policy.cpp  test_stream_stats.cpp  test_update_status.cpp  test_video.cpp  test_web_session_store.cpp  test_wlgrab_pixel_copy.cpp
tests/unit/platform/: test_cage_display_router.cpp  test_common.cpp  test_cuda_gl_encode_device.cpp  test_gamepad_isolation.cpp  test_graphics.cpp  test_portal_grab_policy.cpp  test_session_manager.cpp  test_virtual_display.cpp  test_wayland_virtual_input.cpp
(+83 files in other folders)
